# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wyzecam"
version = "1.1.0"
description = "Python package for communicating with wyze cameras over the local network"
readme = "README.md"
authors = [
  "kroo <elliot@kroo.net>"
]
license = "MIT"
repository = "https://github.com/kroo/wyzecam"
homepage = "https://github.com/kroo/wyzecam"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [# Update me
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
importlib_metadata = { version = "^1.6.0", python = "<3.8" }
pydantic = "^1.8.1"
xxtea = "^2.0.0.post0"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^21.5b0"
mypy = "^0.812"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.6.0"
pydocstyle = "^6.0.0"
pre-commit = "^2.9.3"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkdocstrings = "^0.15.0"
ipython = "^7.23.1"
matplotlib = "^3.4.1"
mkdocs-autorefs = ">0.1,<0.2"

av = { version = "^8.0.3", optional = true }
numpy = { version = "^1.20.2", optional = true }
opencv-python = { version = "^4.5", optional = true }

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py37"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
